# blog-by-vero

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  Trunk.toml  boost.json  composer.json  ideas.md  index.html  nixpacks.toml  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  styles.css  vite.config.js
.github/workflows/: deploy.yml
app/Jobs/: GenerateStoryVideoJob.php
app/Livewire/: BlogStatsWidget.php  PostsTrendWidget.php  UserTrendWidget.php  UsersTableWidget.php
app/Models/: Comment.php  Icon.php  Media.php  Music.php  Photography.php  PhotographyPost.php  Playlist.php  Post.php  PostTag.php  (+6 more)
bootstrap/: app.php
config/: app.php  filesystems.php  markdown.php
docs/: client-by-vero-1a8f220aae690a7e.js  client-by-vero-1a8f220aae690a7e_bg.wasm  client-by-vero-3a47773e53cc6f02.js  client-by-vero-3a47773e53cc6f02_bg.wasm  client-by-vero-421796d9e9d6df06_bg.wasm  client-by-vero-42c345ee04487587.js  client-by-vero-4340d73dc3173c65.js  client-by-vero-4340d73dc3173c65_bg.wasm  client-by-vero-7ed5aeb364353319.js  client-by-vero-7ed5aeb364353319_bg.wasm  client-by-vero-b6272772b55e1693_bg.wasm  client-by-vero-c6b937488c382dac.js  client-by-vero-c6b937488c382dac_bg.wasm  client-by-vero-e0b31089f62a9bc7_bg.wasm  index.html  main-1215ab3cce65bc13.css  main-6f8a6e327d34d07e.css  main-9a981d21ed9ca519.css  main-d99c709023af5d4c.css  main-f901bfb570803b02.css
old/: index.html
public/: cassette.gltf
routes/: web.php
src/: app.rs  lib.rs  main.rs
styles/: about_me.sass  camera_roll.sass  home.sass  journal.sass  main.sass
(+285 files in other folders)
