[package]
name = "client-by-vero"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
yew = { version = "0.21.0", features = ["csr"]}
yew-router = "0.18.0"
common = { path = "../common" }
reqwest = { version = "0.12.4", features = ["json"] }
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
wasm-bindgen = "0.2.92"
implicit-clone = "0.4.9"
